# uio

./: .gitignore  .gitmodules  README.md  flake.nix  justfile
apps/app1/: .config  justfile  main.c
apps/argtest/: .config  Makefile.uk  main.c  run.sh
apps/bpf_prog/: README.md  bpf_helpers.h  count.c  get_count.c  hello.c  hello2.c  justfile  loop.c  loop2.c  noop.c  oob.c  oob2.c  read_symbol.c  zerodiv.c
apps/count/: .config  .gitignore  Config.uk  Makefile  Makefile.uk  README.md  config.eval.noshell  config.eval.ushell  config.eval.ushell.bpf  config.eval.ushell.memstat  config.eval.ushellmpk  config.eval.ushellmpk.bpf  config.eval.ushellmpk.bpf.memstat  config.eval.ushellmpk.bpf.nomcount  config.eval.ushellmpk.bpf.nomcount.lto  config.eval.ushellmpk.bpf.virtiofs  config.eval.ushellmpk.lto  justfile  main.c
apps/hello/: .config  Makefile.uk  justfile  run.sh
apps/mem_usage/: .config  Config.uk  Makefile.uk  README.md  justfile  main.c
apps/mm_test/: Makefile.uk  main.c  run.sh
apps/mpk_test/: .config  Config.uk  Makefile  Makefile.uk  justfile  main.c  mn
apps/mpktest/: .config  Makefile  README.md  justfile  main.c
apps/nginx/: .config  .gitignore  Config.uk  Makefile  Makefile.uk  README.md  config.eval.noshell-mcount.initrd  config.eval.noshell.9p  config.eval.noshell.initrd  config.eval.noshell.initrd.lto  config.eval.noshell.initrd.memstat  config.eval.ushell.9p  config.eval.ushell.bpf.initrd  config.eval.ushell.bpf.nomcount.initrd  config.eval.ushell.initrd  config.eval.ushell.initrd.lto  config.eval.ushell.initrd.memstat  config.eval.ushellmpk.bpf.initrd  config.eval.ushellmpk.bpf.initrd.memstat  config.eval.ushellmpk.bpf.nomcount.initrd  config.eval.ushellmpk.bpf.nomcount.initrd.lto  config.eval.ushellmpk.bpf.nomcount.initrd.memstat  config.eval.ushellmpk.initrd  config.eval.ushellmpk.initrd.lto  config.eval.ushellmpk.initrd.memstat  justfile  main.c  nginx.conf
apps/null/: .config  .gitignore  Makefile  config.eval.noshell.lto  config.eval.noshell.memstat  config.eval.ushell.lto  config.eval.ushellmpk.memstat  exportsyms.uk  justfile  main.c
apps/perf/: .config  Makefile.uk  justfile  main.c
apps/python/: .config  Makefile  Makefile.uk  justfile
apps/redis/: .config  Config.uk  Makefile  Makefile.uk  README.md  bench.sh  config.eval.noshell-mcount.initrd  config.eval.noshell.9p  justfile  (+18 more)
repo/: README.md
terminal/: .gitignore  CMakeLists.txt  EBPFVerifier.cpp  EBPFVerifier.h  EBPFVerifier.hpp  UShellCmdInterceptor.h  UShellCmdInterceptor.hpp  UshellCmdInterceptor.cpp  UshellTerminal.cpp  UshellTerminal.h  parameters.h
terminal/device/: MockSocat.cpp  MockSocat.h  MockUShellConsole.cpp  MockUShellConsole.h  Socat.cpp  Socat.h  UShellConsoleDevice.cpp  UShellConsoleDevice.h  UShellConsoleDevice.hpp  UShellConsoleDeviceFactory.cpp  UShellConsoleDeviceFactory.h  UShellConsoleDeviceFactory.hpp
terminal/device/mock/: UShellConsoleMock.cpp  UShellConsoleMock.h  UShellConsoleMock.hpp
terminal/device/utils/: BlockingQueue.h
terminal/platform/: EBPFPlatformUnikernel.cpp  EBPFPlatformUnikernel.h
terminal/platform/tests/: README.txt  helper_test.c  helper_test2.c
(+303 files in other folders)
